:lipstick: Fix cart button color on mobile

--- a/assets/scss/_config.scss
+++ b/assets/scss/_config.scss
@@ -100,6 +100,9 @@ $colors: (
   purple: (
     base: #B456FF,
   ),
+  green: (
+    base: #0AA753,
+  ),
 );
 
 $color-primary: map_get(map_get($colors, white), base);
